--- a/css/timeline.css
+++ b/css/timeline.css
@@ -14,7 +14,7 @@
 .timestamp
 {
 	position: relative; 
-	background-color: white;
+	background-color: #fbfff1;
 	height: 25px; 
 	width: 25px; 
 	border-radius: 50%;
