--- a/css/all.css
+++ b/css/all.css
@@ -228,7 +228,7 @@ h2.slogan{
 	font-family: 'novecento_sans_widebook';
 	font-size: 30px;
 	line-height: 32px;
-	color: #fff;
+	color: black;
 	margin: 0 0 81px;
 }
 /*skills*/
