--- a/css/timeline.css
+++ b/css/timeline.css
@@ -14,7 +14,7 @@
 .timestamp
 {
 	position: relative; 
-	background-color: #fbfff1;
+	background-color: white;
 	height: 25px; 
 	width: 25px; 
 	border-radius: 50%;
@@ -28,9 +28,9 @@
 	width: 12px;
 	border-radius: 50%;
 
-    top: 6px; 
-    left: 6px; 
-    opacity: 0;
+    	top: 6px; 
+    	left: 6px; 
+    	opacity: 0;
 }
 
 .dates
